Hide api key, add footer, fix context after async

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -20,5 +20,6 @@
     "prec": "Precipitation:",
     "hum": "Humidity:",
     "press": "Pressure:",
-    "wind": "Wind:"
+    "wind": "Wind:",
+    "footer": "Made in proud with Flutter"
   }
