--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -20,5 +20,6 @@
     "prec": "Opady:",
     "hum": "Wilgotność:",
     "press": "Ciśnienie atmosferyczne:",
-    "wind": "Wiatr:"
+    "wind": "Wiatr:",
+    "footer": "Stworzony z dumą we Flutter"
 }
